Add maven plugins
r4853
2019-01-31

## CHANGE
1. Add versions-maven-plugin.
2. Add exec-maven-plugin to mars-sim-main.
3. Add back maven-surefire-plugin and maven-failsafe-plugin.