@@ -159,6 +159,14 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+				    <groupId>org.codehaus.mojo</groupId>
+				    <artifactId>versions-maven-plugin</artifactId>
+				    <version>2.7</version>
+				    <configuration>
+				        <generateBackupPoms>false</generateBackupPoms>
+				    </configuration>
+				</plugin>
 				<!-- <plugin> <groupId>org.jacoco</groupId> <artifactId>jacoco-maven-plugin</artifactId> 
 					<version>0.8.1</version> </plugin> <plugin> <groupId>com.teamtter.mavennatives</groupId> 
 					<artifactId>nativedependencies-maven-plugin</artifactId> <version>1.0.0</version> 
@@ -180,6 +188,26 @@
 				<!-- <plugin> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-maven-plugin</artifactId> 
 					<version>${springboot.version}</version> //not using <!executions> <execution> 
 					<goals> <goal>repackage</goal> </goals> </execution> </executions> </plugin> -->
+				<plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-surefire-plugin</artifactId>
+				    <version>3.0.0-M3</version>
+				    <configuration>
+				        <argLine>
+				            --illegal-access=permit
+				        </argLine>
+				    </configuration>
+				</plugin>
+				<plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-failsafe-plugin</artifactId>
+				    <version>2.22.0</version>
+				    <configuration>
+				        <argLine>
+				            --illegal-access=permit
+				        </argLine>
+				    </configuration>
+				</plugin>
 				<plugin>
 				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 					<groupId>org.apache.maven.plugins</groupId>
